# cara

./: Cargo.toml  Readme.md  flake.nix  main.cara  module.cara  test.asm  test.cara
.github/workflows/: release.yml
compiler/: Cargo.toml
compiler/src/: args.rs  main.cara  main.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: diagnostic.rs  exp.rs  info.rs  lib.rs  program.rs  queries.rs  stmt.rs
crates/analyzer/src/info/: mod.rs  symbol.rs  ty.rs  value.rs
crates/analyzer2/: Cargo.toml
crates/analyzer2/src/: global.rs  lib.rs  lints.rs
crates/analyzer2/src/info/: mod.rs  op.rs  symbol.rs  ty.rs
crates/ast/src/: defs.rs  expr.rs  lib.rs  program.rs  types.rs  visitor.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: expr.rs  lib.rs  program.rs  queries.rs  types.rs
crates/codegen/src/info/: defs.rs  mod.rs  scope.rs  type_.rs  value.rs
crates/codegen_llvm/: Cargo.toml
crates/codegen_llvm/src/: expr.rs  lib.rs  program.rs  stmt.rs  targets.rs  types.rs
crates/codegen_llvm/src/info/: mod.rs  scope.rs  type_.rs  value.rs
crates/const_eval/: Cargo.toml
crates/const_eval/src/: expr.rs  info.rs  lib.rs  queries.rs  stmt.rs
crates/errors/: Cargo.toml
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lint/: Cargo.toml
crates/lint/src/: lib.rs
crates/monomorphize/: Cargo.toml
crates/monomorphize/src/: block.rs  exp.rs  lib.rs  queries.rs  stmt.rs
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  parser.rs
crates/query/: Cargo.toml
crates/query/src/: defs.rs  lib.rs  provider.rs
crates/simplifier/: Cargo.toml
crates/simplifier/src/: exp.rs  lib.rs  namespace.rs  stmt.rs
crates/symbol_table/: Cargo.toml
crates/symbol_table/src/: lib.rs
crates/targets/: Cargo.toml
crates/targets/src/: lib.rs  linker.rs
crates/targets/src/linker/: command.rs  flavor.rs  mod.rs
crates/targets/src/spec/: mod.rs
crates/targets/src/spec/targets/: mod.rs
crates/type_infer/: Cargo.toml
src/: cara.pest  lib.rs  main.rs
src/ast/: defs.rs  expr.rs  mod.rs  program.rs  types.rs
src/backend/: mod.rs  scope.rs  types.rs  values.rs
src/backend/codegen/: decl.rs  expr.rs  mod.rs  program.rs  stmt.rs
src/backend/codegen/comptime/: expr.rs  mod.rs
src/backend/error/: error.rs  log.rs  mod.rs
src/front/: mod.rs
tester/: Cargo.toml
tester/src/: main.rs
tests/: aarch64.cara  fn_value.cara  loop.cara
tests/utils/: io.cara
