[workspace.package]
version = "0.0.2"
edition = "2024"

[workspace.dependencies]
analyzer = { path = "./crates/analyzer" }
ast = { path = "./crates/ast" }
codegen = { path = "./crates/codegen" }
errors = { path = "./crates/errors" }
parser = { path = "./crates/parser" }
query = { path = "./crates/query" }
monomorphize = { path = "./crates/monomorphize" }
anyhow = "1.0.100"

[workspace]
default-members = ["compiler"]
members = ["crates/*", "compiler"]
resolver = "3"
