[workspace.package]
version = "0.0.6"
edition = "2024"

[workspace.dependencies]
analyzer = { path = "./crates/analyzer" }
ast = { path = "./crates/ast" }
codegen = { path = "./crates/codegen" }
errors = { path = "./crates/errors" }
parser = { path = "./crates/parser" }
query = { path = "./crates/query" }
monomorphize = { path = "./crates/monomorphize" }
targets = { path = "./crates/targets" }
type_infer = { path = "./crates/type_infer" }
anyhow = "1.0.100"

[workspace]
default-members = ["compiler"]
members = ["crates/*", "compiler"]
resolver = "3"
