[package]
name = "carac"
version.workspace = true
edition.workspace = true

[dependencies]
parser.workspace = true
anyhow.workspace = true
codegen.workspace = true
query.workspace = true
argh = "0.1.13"
codegen_llvm = { version = "0.1.0", path = "../crates/codegen_llvm" }
tempfile = "3.24.0"

[features]
trace = ["parser/trace"]
