[package]
name = "carac"
version.workspace = true
edition.workspace = true

[dependencies]
parser.workspace = true
anyhow.workspace = true
codegen.workspace = true
query.workspace = true
codegen_llvm = { path = "../crates/codegen_llvm" }
tempfile = "3.24.0"
analyzer.workspace = true
simplifier = { path = "../crates/simplifier" }
ast.workspace = true
targets.workspace = true
clap = { version = "4.5.54", features = ["cargo", "derive"] }

[features]
trace = ["parser/trace"]
