[package]
name = "codegen"
version.workspace = true
edition.workspace = true

[dependencies]
ast.workspace = true
const_eval = { version = "0.1.0", path = "../const_eval" }
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
query.workspace = true
send_wrapper = "0.6.0"
uuid = { version = "1.19.0", features = ["v4"] }
