[package]
name = "codegen_llvm"
version.workspace = true
edition.workspace = true

[dependencies]
ast.workspace = true
const_eval = { path = "../const_eval" }
inkwell = { version = "0.8.0", features = ["llvm20-1"] }
query.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
codegen.workspace = true
symbol_table = { path = "../symbol_table" }
