[package]
name = "codegen_llvm"
version.workspace = true
edition.workspace = true

[dependencies]
ast.workspace = true
const_eval.workspace = true
inkwell = { version = "0.8.0", features = ["llvm18-1"] }
query.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
codegen.workspace = true
symbol_table.workspace = true
target-lexicon = "0.13.4"
targets.workspace = true
monomorphize.workspace = true
